# BE

./: .env  .gitignore  .pre-commit-config.yaml  Convention.MD  README.md  db.sqlite3.local  manage.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
DOCS/: API_Description.md  API_SPEC.md  Convention.MD  DB_MODEL.md  Model_SCHEME_Description.md
comments/: models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
comments/migrations/: 0001_initial.py
config/: urls.py
config/settings/: base.py  local.py  production.py
contact/: forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
contacts/: models.py  serializers.py  services.py  urls.py  views.py
posts/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
users/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
