[tool.poetry]
name = "hands-be"
version = "0.1.0"
description = ""
authors = ["seungwon0113 <jungseungwon0113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-restframework = "^0.0.1"
drf-spectacular = "^0.28.0"
django-stubs = "^5.1.1"
environ = "^1.0"
django-environ = "^0.11.2"
djangorestframework-simplejwt = "^5.3.1"

[tool.django-stubs]
django_settings_module = "config.settings.base"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
coverage = "^7.6.9"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.12
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
